# qt5demo

./: CMakeLists.txt  main.cpp  main1.cpp
decoder/: Decoder.cpp  Decoder.h
libs/SDL2-2.0.22/include/: SDL_audio.h
libs/ffmpeg-n5.1/include/libavcodec/: avcodec.h  codec.h  codec_id.h  codec_par.h  packet.h
libs/ffmpeg-n5.1/include/libavformat/: avformat.h  avio.h
libs/ffmpeg-n5.1/include/libavutil/: avutil.h  channel_layout.h  ffversion.h  frame.h  log.h
libs/ffmpeg-n5.1/lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  swresample.lib  swscale.lib
videopaly/: Videoplay.cpp  Videoplay.h
